# regot-python

./: .gitignore  AUTHORS.md  CHANGELOG.md  LICENSE  MANIFEST.in  PDIP_导师阅读导引.md  README.md  UPLOAD_README.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: wheels.yaml
benchmarks/: run_compare_pdip_qrot_4datasets.py
dist_check/: regot-0.0.3-cp311-cp311-win_amd64.whl
figs/: generate_readme_images.py  generate_readme_plans.py  sticker.py
regot/: __init__.py  _internal.cp311-win_amd64.pyd
src/: LBFGS.h  approx_proj.h  config.h  pdip_block_operator.h  pdip_cg.cpp  pdip_dense_chol.cpp  pdip_dense_chol.h  pdip_dev_flags.h  pdip_fp.cpp  pdip_result.h  pdip_solvers.h  pdip_sparse_chol.cpp  pdip_sparse_chol.h  pdip_transport_ops.hpp  qrot_apdagd.cpp  qrot_assn.cpp  qrot_bcd.cpp  qrot_cg.cpp  qrot_cg.h  qrot_gd.cpp  qrot_grssn.cpp  qrot_hess.cpp  qrot_hess.h  qrot_lbfgs_dual.cpp  qrot_lbfgs_semi_dual.cpp  qrot_linsolve.cpp  qrot_linsolve.h  qrot_pdaam.cpp  qrot_problem.cpp  qrot_problem.h  qrot_result.h  qrot_s3n.cpp  qrot_s5n.cpp  qrot_solvers.cpp  qrot_solvers.h  sinkhorm_sparse_newton.cpp  sinkhorn_apdagd.cpp  sinkhorn_bcd.cpp  sinkhorn_cg.cpp  sinkhorn_cg.h  (+25 more)
src/LBFGSpp/: LBFGS.h
src/sorting/: avx2-emu-funcs.hpp  xss-common-argsort.h  xss-common-comparators.hpp
tests/: test_pdip_api.py
